# gtick

./: .gitignore  CMakeLists.txt  README.md
cmake/: build_type.cmake
data/: gtick.desktop
doc/: CMakeLists.txt
intl/: CMakeLists.txt  plural.c
po/: CMakeLists.txt  af.gmo  ca.gmo  cs.gmo  da.gmo  de.gmo  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  eo.gmo  es.gmo  eu.gmo  fa.gmo  fi.gmo  fr.gmo  ga.gmo  gl.gmo  gtick.pot  hu.gmo  id.gmo  it.gmo  ko.gmo  nl.gmo  pl.gmo  pt_BR.gmo  ro.gmo  ru.gmo  sk.gmo  sr.gmo  sv.gmo  uk.gmo  vi.gmo  zh_CN.gmo
src/: CMakeLists.txt  dsp.c  g711.c  globals.h  gtick.c  gtkoptions.c  gtkoptions.h  gtkutil.c  gtkutil.h  help.c  metro.c  metro.h  option.c  optionlexer.h  optionlexer.l  optionparser.y  options.c  profiles.c  profiles.h  threadtalk.c  util.c  util.h  visualtick.c  visualtick.h
test/: CMakeLists.txt
util/: converter.c
